<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/description_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Item Description"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/description_edittext"
                            android:layout_width="332dp"
                            android:layout_height="wrap_content"
                            android:hint="Enter item description or scan barcode" />

                        <ImageButton
                            android:id="@+id/scan_barcode_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_menu_camera" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/make_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Item Make"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/make_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter item make" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/model_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Item Model"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/model_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter item model" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/amount_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="Price ($)"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/amount_edittext"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:hint=""
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/date_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="Purchase Date"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/date_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="YYYY-MM-DD"
                        android:inputType="date" />

                    <!--            <Button-->
                    <!--                android:id="@+id/date_button"-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="Pick Date" />-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">


                    <TextView
                        android:id="@+id/serial_number_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="Serial #"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/serial_number_edittext"
                        android:layout_width="256dp"
                        android:layout_height="wrap_content"
                        android:hint="Enter Serial # or scan number" />

                    <ImageButton
                        android:id="@+id/serial_number_scanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_menu_camera" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/comment_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="Comments"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/comment_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter comments" />

                </LinearLayout>

                <!-- Additional fields can go here -->
                <Button
                    android:id="@+id/upload_images_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Upload Images" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/image_listview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <!-- Horizontal ScrollView to accommodate multiple tags -->
                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <!-- LinearLayout as a container for tag views -->
                    <LinearLayout
                        android:id="@+id/tags_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Tags will be dynamically added here -->
                    </LinearLayout>

                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/add_tags_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="Add tags space seperated"
                        android:inputType="text"
                        android:minHeight="48dp" />

                    <Button
                        android:id="@+id/add_tags_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Cancel" />

                    <Button
                        android:id="@+id/add_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Add" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:id="@+id/fadeBackgroundUpsert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@android:color/black"
        android:layerType="hardware"
        android:visibility="gone" />
</FrameLayout>
