<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/finding_tory_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Finding 'Tory"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="username"
        android:padding="12dp"
        android:background="@drawable/login_edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/finding_tory_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="48dp" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="name"
        android:padding="12dp"
        android:background="@drawable/login_edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/edit_text_username"
        app:layout_constraintStart_toStartOf="@id/edit_text_username"
        app:layout_constraintEnd_toEndOf="@id/edit_text_username"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/login_edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name"
        app:layout_constraintStart_toStartOf="@id/edit_text_name"
        app:layout_constraintEnd_toEndOf="@id/edit_text_name"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="confirm password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/login_edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_password"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Register"
        android:background="@drawable/login_edittext_bg"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_confirm_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_confirm_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
