...
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/ledger_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:divider="@null"
        app:layout_constraintEnd_toEndOf="parent"
        android:dividerHeight="10.0sp"
        app:layout_constraintTop_toBottomOf="@id/inventory_text"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_inventory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
...
